add support for mongo storage, arg usage, simple "hello" via IM

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "botkit": "0.0.5"
+    "botkit": "0.0.5",
+    "kerberos": "0.0.17",
+    "mongodb": "~1.4",
+    "monk": "^1.0.1"
   }
 }
